[tool.poetry]
name = "assertive"
version = "1.1.0"
description = "A small assertion library for testing"
authors = ["Peter Daly"]
license = "MIT"
homepage = "https://github.com/peter-daly/assertive"
repository = "https://github.com/peter-daly/assertive"
documentation = "https://peter-daly.github.io/assertive/"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]
packages = [
    { include = "assertive" },
]
include = ["CHANGES.rst"]

[tool.poetry.dependencies]
python = "^3.9"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
wily = "^1.24.0"
pyright = "^1.1.372"
ruff = "^0.5.4"
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"
mkdocs-material = "^9.6.12"
mkdocstrings-python = "^1.16.10"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"


[tool.coverage.paths]
source = ["assertive"]
tests = ["tests"]

[tool.black]

[tool.isort]
profile = "black"


[tool.coverage.run]
branch = true
source = ["assertive", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"