[project]
name = "assertive"
version = "1.3.1"
description = "A small assertion library for testing"
authors = [{ name = "Peter Daly" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 5 - Production/Stable"]
dependencies = ["bidict>=0.23.1,<0.24"]

[project.urls]
Homepage = "https://github.com/peter-daly/assertive"
Repository = "https://github.com/peter-daly/assertive"
Documentation = "https://peter-daly.github.io/assertive/"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5",
    "pytest>=7.0.0,<8",
    "ty>=0.0.1,<1",
    "ruff>=0.5.4,<0.6",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings>=0.29.1,<0.30",
    "mkdocs-material>=9.6.12,<10",
    "mkdocstrings-python>=1.16.10,<2",
]

[tool.hatch.build.targets.sdist]
include = [
    "assertive",
    "CHANGES.rst",
]

[tool.hatch.build.targets.wheel]
include = [
    "assertive",
    "CHANGES.rst",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = ["assertive"]
tests = ["tests"]

[tool.coverage.run]
branch = true
source = ["assertive", "tests"]

[tool.ty.src]
exclude = ["docs/"]
